# PixelTactics

./: .gitignore  CMakeLists.txt  CMakeListsss.txt  Mage.json  README.md  client_1.drawio  main.cpp
Application/: Application.h
Cards/: Card.h  Powers.cpp  Powers.h
CommandManager/: CommandManager.h
Commands/: Command.h
DataBase/: Connection.cpp  Connection.h  ConnectionDetails.h  MySQL.cpp  MySQL.h
DataBase/Builder/: Connection.h  ConnectionDetails.h  DataBaseBuilder.h  DataBaseDirector.h  MySQL.h
DataBase/Mapper/: CardsMapper.cpp  CardsMapper.h
DrawableEntities/: Button.h  Card.h  DrawableBox.h  Label.h  Tile.h  Unit.h  Widget.h
DrawableEntities/ScreenParts/: BattleField.h  BottomPanel.h
Game/: Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Hero.cpp  Hero.h  Player.cpp  Player.h  Pole.cpp  Pole.h  Position.cpp
Game Logic/: Deck.h  Game.h  Player.h  Position.h
Game_Logic/: Deck.h  Game.h  Player.h  Position.h
Heroes/: Hero.cpp  Hero.h  Leader.h
Mapper/: PowerMapper.cpp  PowerMapper.h
PowerRequest/: request.cpp  request.h
Request/: request.cpp  request.h
Tests/: Abilities.cpp  BDTests.cpp  CardTests.cpp  DBTests.cpp  HeroesTests.cpp  MyTests.cpp  Perehvat.cpp  tests.cpp
UML/: client_1.drawio
include/: Background.h  Button.h  Card.h  Character.h  Clickable.h  Command.h  DrawableBox.h  Functions.h  GameManager.h  Label.h  StageText.h  Tile.h  Unit.h
include/Commands/: CommandAttack.h  CommandAttackTile.h  CommandConnectToLobby.h  CommandJoinLobby.h  CommandMakeLobby.h  CommandPower.h  CommandReleaseUnit.h  CommandRemoveBody.h  CommandSetUnit.h  CommandTakeCard.h
lib/: Card.h  CardInfo.h  ClientTcpConnection.h  Game.h  GameMsgTypes.h  GameTcpClient.cpp  GameTcpClient.h  GameTcpServer.cpp  GameTcpServer.h  Lobby.cpp  Lobby.h  Message.cpp  Message.h  OwnedMessage.cpp  OwnedMessage.h  Powers.h  ServerTcpConnection.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  TsQueue.cpp  TsQueue.h  card.h  deck.h  hero.h  player.h  pole.h  position.h
src/: Background.cpp  Button.cpp  Card.cpp  Character.cpp  Clickable.cpp  Command.cpp  DrawableBox.cpp  Functions.cpp  Game.cpp  GameManager.cpp  Label.cpp  Powers.cpp  StageText.cpp  Tile.cpp  Unit.cpp  card.cpp  client.cpp  configurations.cpp  deck.cpp  hero.cpp  main.cpp  newmain.cpp  player.cpp  pole.cpp  position.cpp  server.cpp  sources.txt
src/Commands/: CommandAttack.cpp  CommandAttackTile.cpp  CommandConnectToLobby.cpp  CommandJoinLobby.cpp  CommandMakeLobby.cpp  CommandPower.cpp  CommandReleaseUnit.cpp  CommandRemoveBody.cpp  CommandSetUnit.cpp  CommandTakeCard.cpp
src/src/: TcpConnect.cpp  client  client.cpp  howto.txt  serv  server.cpp  server_save.cpp
tests/: DeckTest.cpp  GameTests.cpp  PlayerTests.cpp  PositionTests.cpp  main.cpp  tests.cpp
tests/mocks/: MockTcpConnection.h  MockTcpServer.h
